--- a/src/assets/globalStyle.less
+++ b/src/assets/globalStyle.less
@@ -49,13 +49,10 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 3px solid #535353;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
+  background-color: #008c8c;
   transition: border-color 0.25s;
 }
 
@@ -91,6 +88,6 @@ button:focus-visible {
   }
 
   button {
-    background-color: #f9f9f9;
+    color: black;
   }
 }
