--- a/src/assets/globalStyle.less
+++ b/src/assets/globalStyle.less
@@ -36,7 +36,7 @@ body {
   padding: 0;
   // display: flex;
   /* flex或者grid的简写属性(例如：align-items 和 justify-items 属性) 。 */
-  /* 以后需要定义水平垂直居中的盒子就不需要再 justify-items: center 和 align-items: center 了，直接一行搞定，看起来更加专业 */
+  /* 以后需要定义水平垂直居中的盒子就不需要再 justify-items: center 注意是(justify-items) 和 align-items: center 了，直接一行搞定，看起来更加专业 */
   // place-items: center;
   // min-width: 320px;
   // min-height: 100vh;
