--- a/src/assets/globalStyle.less
+++ b/src/assets/globalStyle.less
@@ -49,7 +49,7 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 3px solid #535353;
+  border: 1px solid #535353;
   font-size: 1em;
   font-family: inherit;
   background-color: #008c8c;
@@ -57,7 +57,7 @@ button {
 }
 
 button:hover {
-  border-color: #646cff;
+  background-color: #646cff;
 }
 
 button:focus,
