--- a/src/assets/globalStyle.less
+++ b/src/assets/globalStyle.less
@@ -57,12 +57,12 @@ button {
 }
 
 button:hover {
-  background-color: #646cff;
+  // background-color: #646cff;
 }
 
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  // outline: 4px auto -webkit-focus-ring-color;
 }
 
 .card {
