--- a/src/components/DiaLog/index.less
+++ b/src/components/DiaLog/index.less
@@ -4,40 +4,36 @@ div.content {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-
+  background-color: rgb(0 0 0 / 30%);
   div.box {
     position: relative;
-    width: 300px;
-    min-height: 200px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
+    width: 300px;
+    min-height: 200px;
+    background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 0px 0.7px rgba(0, 0, 0, 0.038), 0px 0px 1.6px rgba(0, 0, 0, 0.056), 0px 0px 2.7px rgba(0, 0, 0, 0.069), 0px 0px 4.1px rgba(0, 0, 0, 0.08),
-      0px 0px 5.9px rgba(0, 0, 0, 0.09), 0px 0px 8.3px rgba(0, 0, 0, 0.1), 0px 0px 11.8px rgba(0, 0, 0, 0.111), 0px 0px 17.2px rgba(0, 0, 0, 0.124),
-      0px 0px 26.4px rgba(0, 0, 0, 0.142), 0px 0px 47px rgba(0, 0, 0, 0.18);
-
+    box-shadow: 0 0 0.7px rgb(0 0 0 / 3.8%), 0 0 1.6px rgb(0 0 0 / 5.6%), 0 0 2.7px rgb(0 0 0 / 6.9%), 0 0 4.1px rgb(0 0 0 / 8%),
+      0 0 5.9px rgb(0 0 0 / 9%), 0 0 8.3px rgb(0 0 0 / 10%), 0 0 11.8px rgb(0 0 0 / 11.1%), 0 0 17.2px rgb(0 0 0 / 12.4%),
+      0 0 26.4px rgb(0 0 0 / 14.2%), 0 0 47px rgb(0 0 0 / 18%);
+    transform: translate(-50%, -50%);
     div.close {
       position: absolute;
-      font-size: 25px;
-      color: rgb(146, 146, 146);
       top: 0;
       right: 0;
+      font-size: 25px;
+      color: rgb(146 146 146);
     }
     div.title {
-      text-align: center;
       margin: 10px;
+      text-align: center;
     }
-
     div.main {
       margin: 10px;
     }
-
     div.bottom {
       margin: 10px;
       text-align: right;
