--- a/src/view/TestTemplate/demo.html
+++ b/src/view/TestTemplate/demo.html
@@ -11,16 +11,16 @@
         margin: 0;
       }
       .box {
-        width: 200px;
-        height: 100vh;
         position: relative;
         display: inline-block;
+        width: 200px;
+        height: 100vh;
       }
       .item1,
       .item2 {
+        position: absolute;
         width: 200px;
         height: 100%;
-        position: absolute;
         transition: transform 0.3s;
       }
       .item1 {
@@ -31,13 +31,13 @@
         left: 200px;
         width: 15px;
         height: 100%;
-        background-color: #ccc;
         cursor: e-resize;
+        background-color: #cccccc;
       }
       .btn {
         position: absolute;
-        left: 250px;
         top: 20px;
+        left: 250px;
         width: 50px;
         cursor: pointer;
       }
