--- a/src/view/Websocket/index.less
+++ b/src/view/Websocket/index.less
@@ -1,9 +1,9 @@
 .box_chat {
-  margin: 10px;
-  border: 1px solid #ccc;
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-start;
+  margin: 10px;
+  border: 1px solid #cccccc;
   .box_chat_item {
     margin: 5px;
   }
